--- a/Crazy_Arcade/Crazy_Arcade/Include/Crazy_Arcade.vcxproj
+++ b/Crazy_Arcade/Crazy_Arcade/Include/Crazy_Arcade.vcxproj
@@ -153,6 +153,14 @@
     <ClInclude Include="Core.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Macro.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Types.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Crazy_Arcade.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
