--- a/Crazy_Arcade/Crazy_Arcade/Include/Crazy_Arcade.vcxproj.filters
+++ b/Crazy_Arcade/Crazy_Arcade/Include/Crazy_Arcade.vcxproj.filters
@@ -35,5 +35,21 @@
     <ClInclude Include="Core.h">
       <Filter>01. Core</Filter>
     </ClInclude>
+    <ClInclude Include="Types.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Crazy_Arcade.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon1.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
